--- a/apps/index.html
+++ b/apps/index.html
@@ -38,9 +38,11 @@
   <ol>
     <li>En Android Studio, crea un nuevo proyecto:
       <ul>
-        <li>Si todavía no has abierto un proyecto, en la pantalla de <strong>bienvenida</strong>, haz clic en <menuoption>Start a new Android Studio project</menuoption>:
-          <img src="img/8032f85f56481e5a.png"></li>
-        <li>Si has abierto un proyecto, ve a <menuoption>File</menuoption> &gt; <menuoption>New</menuoption> &gt; <menuoption>New project</menuoption>.</li>    
+        <li>Si todavía no has abierto un proyecto, en la pantalla de <strong>bienvenida</strong>, 
+          haz clic en <menuoption>Start a new Android Studio project</menuoption>:
+          <img src="img/8032f85f56481e5a.png">
+        </li>
+        <li>Si has abierto un proyecto, ve a <menuoption>File</menuoption><menuoption>New</menuoption><menuoption>New project</menuoption>.</li>    
       </ul>
     </li>
     <li>Elije la plantilla para la <w>Activity</w> principal de la App. Para esta práctica elije <strong>Empty Activity</strong>.
@@ -180,14 +182,12 @@
     <li>Conectar el dispositivo al equipo de desarrollo con un 
       cable USB.</li>
     <li>Habilitar <strong>la depuración USB</strong> en el dispositivo 
-      móvil, yendo a <menuoption>Ajustes</menuoption> &gt; 
-      <menuoption>Opciones de desarrollador</menuoption>.</li>
+      móvil, yendo a <menuoption>Ajustes</menuoption><menuoption>Opciones de desarrollador</menuoption>.</li>
   </ol>
   <warn><p>En Android 4.2 y versiones posteriores, 
     <strong>Opciones de desarrollador</strong> se oculta de forma 
     predeterminada. Para que esté disponible, ve al menú del móvil 
-    <menuoption>Ajustes</menuoption> &gt; 
-    <menuoption>Acerca del teléfono</menuoption>
+    <menuoption>Ajustes</menuoption><menuoption>Acerca del teléfono</menuoption>
     y toca <strong>el número de compilación</strong> SIETE veces. 
     Regresa a la pantalla anterior y encontrarás 
     las <strong>Opciones de desarrollador</strong>.</p>
