--- a/navigation/index.html
+++ b/navigation/index.html
@@ -44,7 +44,7 @@
     <ol>
 
     <li>
-        <p>Selecciona &#34;<strong>Empty Activity</strong>&#34; como plantilla para la MainActivity</p>
+        <p>Selecciona <menuoption>Empty Activity</menuoption> como plantilla para la MainActivity</p>
     </li>
 
     <li>
@@ -118,7 +118,7 @@
 
     <p>Empezaremos creando estas Activities, con los nombres: <w>DrawerActivity</w>, <w>BottomActivity</w>, <w>OptionsActivity</w> y <w>TabbedActivity</w>.</p>
 
-    <p>Para crear una Activity selcciona <menuoption >New ⯈</menuoption> <menuoption>Activity ⯈</menuoption> <menuoption>Empty Activity</menuoption> e introduce el nombre en el campo <menuoption>Activity Name</menuoption></p>
+    <p>Para crear una Activity selcciona <menuoption>New</menuoption><menuoption>Activity</menuoption><menuoption>Empty Activity</menuoption></p>
 
     <img src="img/created_activies.png">
 
@@ -236,8 +236,7 @@
     la Activity que queremos iniciar.</p>
 
     <p>Reemplaza el código de la clase <w>MainActivity</w> por este (¡excepto la primera linea del <w>package</w>!). 
-        Usa <kbd>Alt + Intro</kbd> 
-    para importar la clase de databinding):</p>
+        Usa <kbd>Alt + Intro</kbd> para importar la clase de viewbinding:</p>
 
     <codefile>
         MainActivity.java
@@ -413,8 +412,9 @@
 
     <p>Crearemos estos dos ficheros, y definiremos la cabecera y el menú:</p>
     <ul>
-        <li> <p>Cabecera: Haz clic-derecho sobre la carpeta <directory>res/layout</directory> y ve a <menuoption>New ⯈</menuoption> <menuoption>Layout Resource File</menuoption> e 
-            introduce <menuoption>File name:</menuoption> <name>drawer_header</name></p>
+        <li> <p>Cabecera: Haz clic-derecho sobre la carpeta <directory>res/layout</directory> 
+            y ve a <menuoption>New</menuoption><menuoption>Layout Resource File</menuoption></p>
+            <p>Introduce <menuoption>File name:</menuoption> <name>drawer_header</name></p>
 
             <img src="img/drawer_header_layout.png">
 
@@ -451,9 +451,9 @@
         </li>
 
         <li><p>Menu: Haz clic-derecho sobre la carpeta <directory>res</directory> y ve a 
-                <menuoption>New ⯈</menuoption> <menuoption>Android Resource File</menuoption> e 
-                introduce <menuoption>File name:</menuoption> <name>drawer_menu</name>, 
-            y selecciona <menuoption>Resource type:</menuoption> <name>Menu</name>.</p>
+                <menuoption>New</menuoption><menuoption>Android Resource File</menuoption></p>
+            <p>Introduce <menuoption>File name:</menuoption><name>drawer_menu</name>, 
+            <p>Selecciona <menuoption>Resource type:</menuoption><name>Menu</name>.</p>
 
             <img src="img/drawer_menu.png">
 
@@ -895,11 +895,9 @@
     entre ellos usando <w>Navigation</w>, sino usando el <w>ViewPager2</w>.</p>
 
     <p>Llamaremos a estos fragments: <w>Tabbed1AFragment</w>, <w>Tabbed1BFragment</w> y <w>Tabbed1CFragment</w>.</p>
-    <p>Para crear un Fragment, haz clic-derecho sobre la carpeta <directory>app</directory> y 
-        selecciona <menuoption>New ⯈</menuoption> 
-        <menuoption>Fragment ⯈</menuoption> <menuoption>Fragment (Blank)</menuoption>.
-    <br>En el campo <menuoption>Fragment Name</menuoption>, introduce el nombre del campo.</p>
-
+    <p>Para crear un Fragment: clic-derecho sobre <directory>app</directory> y 
+    <menuoption>New</menuoption> <menuoption>Fragment</menuoption> <menuoption>Fragment (Blank)</menuoption>.</p>
+    
     <p>Crea los 3 fragments: <w>Tabbed1AFragment</w>, <w>Tabbed1BFragment</w> y <w>Tabbed1CFragment</w>.</p>
 
     <img src="img/tabbed_abc.png">
