--- a/sofishow/index.html
+++ b/sofishow/index.html
@@ -11,6 +11,15 @@
     
     <abstract>
         <p>
+            <menuoption>File</menuoption><menuoption>New</menuoption><menuoption>Activity</menuoption>
+        </p>
+        <p>
+            <menuoption>New</menuoption><menuoption>Activity</menuoption>
+        </p>
+        <p>
+            <menuoption>Activity</menuoption>
+        </p>
+        <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus pretium est condimentum congue. Nam lobortis est eu lacinia venenatis. Aliquam erat volutpat.
         </p>
     </abstract>
