--- a/navigation/index.html
+++ b/navigation/index.html
@@ -947,7 +947,7 @@
             private FragmentTabbed1Binding binding;
 
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
                 return (binding = FragmentTabbed1Binding.inflate(inflater, container, false)).getRoot();
             }
 
