--- a/viewbinding/index.html
+++ b/viewbinding/index.html
@@ -41,7 +41,7 @@
             private FragmentMainBinding binding;
         
             @Override
-            public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
+            public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
                 return (binding = FragmentMainBinding.inflate(inflater, container, false)).getRoot();
 
             }
