--- a/mvvm/index.html
+++ b/mvvm/index.html
@@ -232,7 +232,7 @@
 
 <section>
     <h2>Bloqueos, pérdida de datos y <em>Memory Leaks</em></h2>
-    <p>Un error común es escribir todo el código en una <w>Activity</w> o <w>Fragment</w>.</p>
+    <p>Cuando se desarrolla un app Android, un error común es escribir todo el código en una <w>Activity</w> o <w>Fragment</w>.</p>
 
     <p>Por ejemplo, en el método <w>onViewCreated()</w> de la clase <w>MiHipotecaFragment</w> podríamos estar
     tentados a hacer lo siguiente:</p>
@@ -578,7 +578,7 @@
     <h2>Progreso y Gestión de errores</h2>
 
     // in progress...
-    
+
     <p>La comunicación entre el ViewModel y el Model se realiza mediante llamadas y llamadas de vuelta (<em>callbacks</em>).
         En las llamadas de vuelta, se devuelve el resultado y también del progreso y los errores. 
         El ViewModel se los notifica a la Vista mediante variables <w>LiveData</w>.</p>
