--- a/javatutorial/5/index.html
+++ b/javatutorial/5/index.html
@@ -136,9 +136,9 @@
         }
     </code>
 
-    <p>Una sentpencia condicional amb múlitples branques crea un <strong>arbre de decisió</strong>, el 
+    <p>Una sentència condicional amb múlitples branques crea un <strong>arbre de decisió</strong>, el 
     qual els seus nodes són expressions booleanes, i cada branca es marca amb <em>true</em> o <em>false</em>. 
-    La <em>branca-true</em> porta a un bloc de sentències i la <em>branca-false</em> porta a la comprovar la 
+    La <em>branca-true</em> porta a un bloc de sentències i la <em>branca-false</em> porta a comprovar la 
     següent expressió. L'última <em>branca-false</em> significa <em>"en qualsevol altre cas"</em>.</p>
 
     <info>
@@ -154,8 +154,8 @@
 
     <h3>Niament de sentències if-else</h3>
     <p>Les sentències <w>if-else</w> es poden niar (posar unes dintre d'altres). És a dir, en el bloc
-    d'una condició es poden posar altres <w>if-else</w>, que només seran executades si es compleix la condició 
-    i per tant s'executa el bloc.</p>
+    d'una condició es poden posar altres <w>if-else</w>, que només seran executades si es compleix la condició ( 
+    i per tant s'executa el bloc).</p>
     
     <p>El següent exemple executa un editor específic depenent del Sistema Operatiu i la seva versió:</p>
 
