--- a/webapps/index.html
+++ b/webapps/index.html
@@ -714,5 +714,25 @@
 <section>
     <h2>El navegador web</h2>
 
+    
+    <p>html css javascript</p>
 
+    <p>apis</p>
+</section>
+
+<section>
+    <h2>El servidor web</h2>
+
+    <p>php mysql</p>
+</section>
+
+<section>
+    <h2>Formats de dades</h2>
+    <p>json xml</p>
+</section>
+
+<section>
+    <h2>Frameworks</h2>
+
+    <p>angular</p>
 </section>
