--- a/javatutorial/5/index.html
+++ b/javatutorial/5/index.html
@@ -13,8 +13,8 @@
             a un programa fer distintes accions depenent del valor d'una expressió Booleana.
         </p>
         <p>Aprendràs:</p>
-        <check>A utilitzar la sentència if-else.</check>
-        <check>A utilitzar la sentència switch.</check>
+        <check>A utilitzar la sentència <strong>if-else</strong>.</check>
+        <check>A utilitzar la sentència <strong>switch</strong>.</check>
     </abstract>
 </header>
 
